starting to really build my photo site..

--- a/Assets/app.scss
+++ b/Assets/app.scss
@@ -1,5 +1,8 @@
-//@import 'fontawesome/css/fontawesome.css';
-//@import 'reset-css/reset';
+@import 'fontawesome/css/fontawesome.css';
+@import 'reset-css/reset';
+@import 'textures';
+@import 'bourbon';
+@import 'neat';
 
 html{
 box-sizing: border-box;
